Fixed an overflow issue for long article titles. Fixed comments being attributed to the wrong username.

--- a/footnotrflask/static/application.less
+++ b/footnotrflask/static/application.less
@@ -124,6 +124,7 @@ div.masthead {
 		margin:8px 8px 8px 12px;
 		border-bottom:solid 1px black;
 		padding-bottom:8px;
+		overflow: hidden;
 		
 		&:first-child {
 			border-top:solid 1px black;
